--- a/dropdown.css
+++ b/dropdown.css
@@ -41,3 +41,6 @@
   opacity: 0;
   transition: opacity 100ms ease-in-out 200ms;
 }
+.dropdown-list a:hover {
+  background-color: rgb(233, 233, 233);
+}
