--- a/dropdown.css
+++ b/dropdown.css
@@ -21,6 +21,7 @@
   overflow: auto;
   box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
   z-index: 1;
+  border-radius: 15px;
 }
 .dropdown-list a {
   color: black;
